First functional iteration
HTML, SASS and jQuery script

--- a/css/main.css
+++ b/css/main.css
@@ -1,377 +1,1 @@
-/**
- * Base imports
- */
-/*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
-/**
- * 1. Change the default font family in all browsers (opinionated).
- * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
- */
-html {
-  font-family: sans-serif;
-  /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */ }
-
-/**
- * Remove the margin in all browsers (opinionated).
- */
-body {
-  margin: 0; }
-
-/* HTML5 display definitions
-   ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- * 2. Add the correct display in IE.
- */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section,
-summary {
-  /* 1 */
-  display: block; }
-
-/**
- * Add the correct display in IE 9-.
- */
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; }
-
-/**
- * Add the correct display in iOS 4-7.
- */
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline; }
-
-/**
- * Add the correct display in IE 10-.
- * 1. Add the correct display in IE.
- */
-template,
-[hidden] {
-  display: none; }
-
-/* Links
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent; }
-
-/**
- * Remove the outline on focused links when they are also active or hovered
- * in all browsers (opinionated).
- */
-a:active,
-a:hover {
-  outline-width: 0; }
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * 1. Remove the bottom border in Firefox 39-.
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */ }
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-b,
-strong {
-  font-weight: inherit; }
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder; }
-
-/**
- * Add the correct font style in Android 4.3-.
- */
-dfn {
-  font-style: italic; }
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
-
-/**
- * Add the correct background and color in IE 9-.
- */
-mark {
-  background-color: #ff0;
-  color: #000; }
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%; }
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sub {
-  bottom: -0.25em; }
-
-sup {
-  top: -0.5em; }
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10-.
- */
-img {
-  border-style: none; }
-
-/**
- * Hide the overflow in IE.
- */
-svg:not(:root) {
-  overflow: hidden; }
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
-
-/**
- * Add the correct margin in IE 8.
- */
-figure {
-  margin: 1em 40px; }
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */ }
-
-/* Forms
-   ========================================================================== */
-/**
- * Change font properties to `inherit` in all browsers (opinionated).
- */
-button,
-input,
-select,
-textarea {
-  font: inherit; }
-
-/**
- * Restore the font weight unset by the previous rule.
- */
-optgroup {
-  font-weight: bold; }
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- * 2. Show the overflow in Edge, Firefox, and IE.
- */
-button,
-input,
-select {
-  /* 2 */
-  overflow: visible; }
-
-/**
- * Remove the margin in Safari.
- * 1. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-select,
-textarea {
-  /* 1 */
-  margin: 0; }
-
-/**
- * Remove the inheritence of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritence of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none; }
-
-/**
- * Change the cursor in all browsers (opinionated).
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  cursor: pointer; }
-
-/**
- * Restore the default cursor to disabled elements unset by the previous rule.
- */
-[disabled] {
-  cursor: default; }
-
-/**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS.
- */
-button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */ }
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-input:-moz-focusring {
-  outline: 1px dotted ButtonText; }
-
-/**
- * Change the border, margin, and padding in all browsers (opinionated).
- */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */ }
-
-/**
- * Remove the default vertical scrollbar in IE.
- */
-textarea {
-  overflow: auto; }
-
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */ }
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
-
-/**
- * Correct the odd appearance of search inputs in Chrome and Safari.
- */
-[type="search"] {
-  -webkit-appearance: textfield; }
-
-/**
- * Remove the inner padding and cancel buttons in Chrome on OS X and
- * Safari on OS X.
- */
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-/**
- * Components imports
- */
-/**
- * Layout imports
- */
-/**
- * Pages imports
- */
-/**
- * Home page styles
- */
+/*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0}progress{vertical-align:baseline}template,[hidden]{display:none}a{background-color:transparent}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:0.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}button,input,select,textarea{font:inherit}optgroup{font-weight:bold}button,input,select{overflow:visible}button,input,select,textarea{margin:0}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{cursor:pointer}[disabled]{cursor:default}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}button:-moz-focusring,input:-moz-focusring{outline:1px dotted ButtonText}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}.home-page header:after{content:"";display:table;clear:both}.main-header,.main-footer,.home-page header,.portfolio,.skills,.contact{max-width:1024px;margin:0 auto}*{box-sizing:border-box}body{background:#e9ece5;line-height:1.6}ul{list-style:none;padding:0}a{transition:all .2s}a:hover{color:#7cbdb0}body{font-family:"Open Sans",Helvetica,Arial,sans-serif}h1,h2,h3{color:#3b3a36}h2{margin-top:0;text-transform:uppercase;text-align:center;font-weight:100;padding:1.5rem 0 0}@media (min-width: 768px){h2{padding:2.5rem 0 0}}@media (min-width: 1024px){h2{padding:3.5rem 0 1rem}}h3{text-align:center;font-size:1.1rem;font-weight:800;text-transform:uppercase;color:#b3c2bf}p{color:#3b3a36}a{text-decoration:none;color:#3b3a36}.main-header{display:flex;flex-wrap:wrap;align-items:center;padding:0 1.5rem 0;background:#c0dfd9}.main-header a.header-logo{flex:1;display:block;font-size:1.4rem}.main-header a.header-nav-btn{display:block}.main-header a.header-nav-btn i{margin:1rem 0 1rem 1rem;font-size:1.4rem}@media (min-width: 768px){.main-header{padding-top:3rem;text-align:center;background:none}.main-header a.header-logo{display:inline-block;margin-bottom:.5rem;font-size:3rem;font-weight:100}.main-header a.header-nav-btn{display:none}}@media (min-width: 1024px){.main-header{padding:3rem 2rem 2rem}.main-header a.header-logo{font-size:2rem;font-weight:100;flex:initial;margin-right:auto}}.header-nav{flex:1 100%;display:none}.header-nav ul{margin:1rem 0}.header-nav a{display:block;padding:1rem;font-size:1.1rem;font-weight:100;text-align:center;border-top:1px solid #d8ebe7}@media (min-width: 768px){.header-nav{display:inline-block}.header-nav li{display:inline-block}.header-nav a{font-size:0.9rem;font-weight:800;text-transform:uppercase;display:inline-block;border:none}}@media (min-width: 1024px){.header-nav{flex:initial}}.main-footer{font-size:0.9rem;font-weight:800;display:flex;justify-content:space-between;padding:2rem 1.5rem;text-transform:uppercase}.main-footer a.footer-logo{text-transform:none}@media (min-width: 768px){.main-footer{padding:2rem}}.footer-nav ul{margin:0}.footer-nav li{display:none;margin-left:3rem}.footer-nav li.top{display:inline}@media (min-width: 768px){.footer-nav li{display:inline}.footer-nav li.top{display:none}}.home-page header{font-size:1.1rem;font-weight:100;text-align:center;padding:1.5rem}.home-page header img{max-width:60%;border-radius:50%;margin:1.5rem 0}@media (min-width: 560px){.home-page header img{float:right;max-width:35%;margin-right:1rem}.home-page header p{max-width:55%;text-align:left;float:left}}@media (min-width: 768px){.home-page header{padding:2rem}.home-page header img{width:30%;max-width:225px;margin:1rem 7.5%}.home-page header p{max-width:55%}}.portfolio{background:#f0f2ee;padding:0 1.5rem}.portfolio ul{display:flex;flex-wrap:wrap;justify-content:space-between;margin:0}.gallery-item img{max-width:100%}.gallery-item p{font-size:1.1rem;font-weight:100;text-align:center}@media (min-width: 560px){.gallery-item{width:48.75%}}@media (min-width: 768px){.gallery-item{margin:1rem 0}}@media (min-width: 1024px){.gallery-item{width:31.6666666667%;margin-bottom:1.5rem}}.skills{background:#e2f0ed;padding:0 1.5rem 1.5rem}.skills p{font-size:1.1rem;font-weight:100;text-align:center;max-width:720px;margin-left:auto;margin-right:auto}.skills ul{display:flex;flex-wrap:wrap;justify-content:center;max-width:720px;margin:0 auto}.skills ul li{background-color:#9ecec5;margin:7px;padding:5px 20px;border-radius:25px;border-bottom:3px solid #b3c2bf}@media (min-width: 560px){.skills ul li:nth-of-type(2n){background-color:#8a8880;color:#c0dfd9}}.contact{background:#f0f2ee;padding:0 1.5rem 2rem}.contact p{font-size:1.1rem;font-weight:100;text-align:center;max-width:720px;margin-left:auto;margin-right:auto}.contact p:nth-child(3){margin-top:2.5rem}.contact a{font-size:1.5em;color:#7cbdb0}.contact a:hover{color:#706e67}@media (min-width: 768px){.contact{padding-bottom:3.5rem}.contact a{font-size:2rem;font-weight:100}}
