--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,8 +1,8 @@
 /**
- * Footer styles
+ * Mixins
  */
 
-// Media Query Mixin
+// Media Query
 @mixin media($break) {
   @if $break == mobile {
     @media (min-width: $brk-small) {
@@ -25,33 +25,38 @@
 
 
 
-// Font size mixins
+// Font size 
 @mixin small-light {
-  font-size: 0.9rem;
+  font-size: $font-small;
   font-weight: 100;
 }
 
+@mixin small-normal {
+  font-size: $font-small;
+  font-weight: 400;
+}
+
 @mixin small-bold {
-  font-size: 0.9rem;
+  font-size: $font-small;
   font-weight: 800;
 }
 
 @mixin medium-light {
-  font-size: 1.1rem;
+  font-size: $font-medium;
   font-weight: 100;
 }
 
 @mixin medium-normal {
-  font-size: 1.1rem;
+  font-size: $font-medium;
   font-weight: 400;
 }
 
 @mixin medium-bold {
-  font-size: 1.1rem;
+  font-size: $font-medium;
   font-weight: 800;
 }
 
 @mixin large-light {
-  font-size: 2rem;
+  font-size: $font-large;
   font-weight: 100;
 }
