Fix Title on iPad

--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -31,7 +31,7 @@
     background: none;
 
     a.header-logo {
-      display: inline-block;
+      flex-basis: 300px;
       margin-bottom: .5rem;
       font-size: 3rem;
       font-weight: 100;
