--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -19,6 +19,10 @@
   a.header-nav-btn {
     display: block;
 
+    &:hover {
+      color: $color-primary;
+    }
+
     i {
       margin: 1rem 0 1rem 1rem;
       font-size: 1.4rem;
@@ -67,7 +71,7 @@
     padding: 1rem;
     @include medium-light;
     text-align: center;
-    border-top: 1px solid lighten($color-highlight, 7);
+    border-top: 1px solid rgba($color-primary, .1);
   }
 
   @include media(tablet) {
