Additional font variables

--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -16,7 +16,7 @@
   }
 
   a {
-    font-size: 1.3em;
+    font-size: $font-medium-large;
     line-height: 1;
     margin-left: .5rem;
     color: darken($color-highlight, 20);
