--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,11 +8,14 @@ $color-secondary       : #b3c2bf;
 $color-highlight       : #c0dfd9;
 $color-background      : #e9ece5;
 
+
 // Font variables
 $font-primary          : 'Open Sans', Helvetica, Arial, sans-serif;
 $font-small            : 0.9rem;
 $font-medium           : 1.1rem;
+$font-medium-large     : 1.4rem;
 $font-large            : 2rem;
+$font-very-large       : 3rem;
 
 // Breakpoints
 $brk-small             : 320px;
