--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -13,7 +13,7 @@
   a.header-logo {
     flex: 1;
     display: block;
-    font-size: 1.4rem;
+    font-size: $font-medium-large;
   }
 
   a.header-nav-btn {
@@ -25,7 +25,7 @@
 
     i {
       margin: 1rem 0 1rem 1rem;
-      font-size: 1.4rem;
+      font-size: $font-medium-large;
     }
   }
 
@@ -37,7 +37,7 @@
     a.header-logo {
       flex-basis: 300px;
       margin-bottom: .5rem;
-      font-size: 3rem;
+      font-size: $font-very-large;
       font-weight: 100;
     }
 
