--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 0 1.5rem 0;
-  background: $color-highlight;
+  background: $color-bg-medium;
 
   a.header-logo {
     flex: 1;
@@ -71,7 +71,7 @@
     padding: 1rem;
     @include medium-light;
     text-align: center;
-    border-top: 1px solid rgba($color-primary, .1);
+    border-top: 1px solid $color-bg-medium;
   }
 
   @include media(tablet) {
