--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -4,7 +4,7 @@
 
 .contact {
   @extend %app-width;
-  background: lighten($color-background, 3);
+  background: $color-bg-light;
   padding: 0 1.5rem 1.5rem;
 
   p {
@@ -19,11 +19,11 @@
     font-size: $font-medium-large;
     line-height: 1;
     margin-left: .5rem;
-    color: darken($color-highlight, 20);
+    color: $color-highlight-dark;
   }
 
   a:hover {
-    color: lighten($color-primary, 20);
+    color: $color-primary;
   }
 
 
