--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -4,7 +4,7 @@
 
 .portfolio {
   @extend %app-width;
-  background: lighten($color-background, 3);
+  background: $color-bg-light;
   padding: 0 1.5rem;
 
   ul {
